--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
 .aside {
     background-color: black;
     /*width: 80px;*/
-    height: 600px;
+    /*height: 600px;*/
     z-index: 100;
 }
 
@@ -63,7 +63,7 @@ body{
 
 .container {
     width: 100%;
-    height: 80%;
+    height: 80vh;
     margin-left: 10%;
     background-color: #fffbf6;
     display: flex;
@@ -128,7 +128,7 @@ body{
 
 .img-big-size {
     width: 520px;
-    height: 600px;
+    height: 80vh;
     /*height: 100%*/
 
 }
