--- a/style.css
+++ b/style.css
@@ -33,20 +33,10 @@ body{
     font-weight: 600;
 }
 
-.aside span {
-    color: white;
-    font-size: 9px;
-    writing-mode: vertical-rl;
-    text-orientation: upright;
-    text-align: center;
-    padding: 15vh 2vh 0;
-    font-family: 'Playfair Display', serif;
-}
+
 
 .aside {
     background-color: black;
-    /*width: 80px;*/
-    /*height: 600px;*/
     z-index: 100;
 }
 
@@ -61,7 +51,15 @@ body{
     font-weight: 700;
 
 }
-
+.aside span {
+    color: white;
+    font-size: 9px;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    text-align: center;
+    padding: 10vh 2vh 0;
+    font-family: 'Playfair Display', serif;
+}
 .container {
     width: 100%;
     height: 80vh;
@@ -214,11 +212,12 @@ body{
 }
 .view-more-block p{
     font-size: 18px;
-    margin: 142px 0 100px;
+    /*margin: 142px 0 100px;*/
     text-transform: uppercase;
     color: white;
     width: 300px;
-    padding: 20px;
+    /*text-align: center;*/
+    padding: 12vh 3vh 0;
     line-height: 1.2;
     font-family: 'Playfair Display', serif;
 }
